@@ -31,7 +31,6 @@ import java.util.Map;
 import java.util.Objects;
 
 import static io.activej.common.Checks.checkArgument;
-import static java.util.stream.Collectors.toList;
 
 @SuppressWarnings("rawtypes")
 final class AttributeNodeForSimpleType extends AbstractAttributeNodeForLeaf {
@@ -81,7 +80,7 @@ final class AttributeNodeForSimpleType extends AbstractAttributeNodeForLeaf {
 		checkArgument(attrName.equals(name), "Attribute names do not match");
 		if (setter == null) return;
 
-		for (Object target : targets.stream().filter(Objects::nonNull).collect(toList())) {
+		for (Object target : targets.stream().filter(Objects::nonNull).toList()) {
 			try {
 				setter.invoke(target, value);
 			} catch (IllegalAccessException | InvocationTargetException e) {
